--- a/project1/webapp/index.html
+++ b/project1/webapp/index.html
@@ -10,6 +10,7 @@
             height: 100%;
         }
     </style>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script
         id="sap-ui-bootstrap"
         src="resources/sap-ui-core.js"
