--- a/project1/webapp/index.html
+++ b/project1/webapp/index.html
@@ -24,6 +24,8 @@
         data-sap-ui-async="true"
         data-sap-ui-frameOptions="trusted"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/selfie_segmentation/selfie_segmentation.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
 </head>
 <body class="sapUiBody sapUiSizeCompact" id="content">
     <div
